Published New Resume

--- a/02_projects/02_projectDetails/index.html
+++ b/02_projects/02_projectDetails/index.html
@@ -19,14 +19,14 @@
         <p id="me_index">Judy Zhang</p>
         <div class="web">          
             <a href="../../index.html">About</a>
-            <a href="../index.html" id="active">Projects</a>
+            <a href="../index.html" id="active">Case Studies</a>
             <a href="../../00_assets/me/Judy Zhang Resume.pdf" target="_blank">Resumé</a>
         </div>
         <div class="mob">
             <div id="mobIcon"><img src="../../00_assets/svgs/hmg.svg" width="60vh" height="60vh"></div>
             <ul class="mobNav">
                 <a href="../../index.html"><li>About</li></a>
-                <a href="../index.html" id="mobActive"><li>Projects</li></a>
+                <a href="../index.html" id="mobActive"><li>Case Studies</li></a>
                 <a href="../../00_assets/me/Judy Zhang Resume.pdf" target="_blank"><li>Resumé</li></a>
             </ul>
         </div>
