--- a/03_design/index.html
+++ b/03_design/index.html
@@ -21,8 +21,8 @@
       <a class="myname" href="../index.html">Judy Zhang</a>
       <a class="skip"></a>
       <a href="../index.html">About</a>
-      <a href="../02_projects/index.html">Projects</a>
-      <a href="../00_assets/me/Judy Zhang Resume.pdf" target="_blank">Resumé</a>
+      <a href="../02_projects/index.html">Case Studies</a>
+      <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank">Resumé</a>
     </div>
   </div>
 
