--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         <!-- <p  id="me_index">Judy Zhang</p> -->
         <div class="web">            
             <a href="#" id="active">About</a>
-            <a href="../02_projects/index.html" >Projects</a>
-            <a href="../00_assets/me/Judy Zhang Resume.pdf" target="_blank">Resumé</a>
+            <a href="../02_projects/index.html" >Case Studies</a>
+            <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank">Resumé</a>
         </div>
         <div class="mob">
             <div id="mobIcon"><img src="../00_assets/svgs/hmg.svg" width="60vh" height="60vh"></div>
             <ul class="mobNav">
                 <a href="#" id="mobActive"><li>About</li></a>
-                <a href="../02_projects/index.html"><li >Projects</li></a>
-                <a href="../00_assets/me/Judy Zhang Resume.pdf" target="_blank"><li>Resumé</li></a>
+                <a href="../02_projects/index.html"><li >Case Studies</li></a>
+                <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank"><li>Resumé</li></a>
             </ul>
         </div>
     </nav>        
@@ -57,7 +57,8 @@
     <div class="social">
         <h1 id="followUp"></h1>
         <div class="follow">
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=judyz1594@gmail.com" target="_blank"><img src="./00_assets/svgs/gm.svg" id="up1"></a>
+            <a href="https://www.upwork.com/freelancers/~012b4bcc0ee9eb2b47" target="_blank"><img src="./00_assets/svgs/upwork.svg" id="up1"></a>
+            <!-- <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=judyz1594@gmail.com" target="_blank"><img src="./00_assets/svgs/gm.svg" id="up1"></a> -->
             <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img src="./00_assets/svgs/lk.svg" id="up2"></a>
             <a href="https://github.com/JudyZhang05" target="_blank"><img src="./00_assets/svgs/gh.svg" id="up3"></a>
         </div>
