--- a/02_projects/index.html
+++ b/02_projects/index.html
@@ -19,15 +19,15 @@
         <p id="me_index">Judy Zhang</p>
         <div class="web">          
             <a href="../index.html">About</a>
-            <a href="#" id="active">Projects</a>
-            <a href="../00_assets/me/Judy Zhang Resume.pdf" target="_blank">Resumé</a>
+            <a href="#" id="active">Case Studies</a>
+            <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank">Resumé</a>
         </div>
         <div class="mob">
             <div id="mobIcon"><img src="../00_assets/svgs/hmg.svg" width="60vh" height="60vh"></div>
             <ul class="mobNav">
                 <a href="../index.html"><li>About</li></a>
-                <a href="#" id="mobActive"><li>Projects</li></a>
-                <a href="../00_assets/me/Judy Zhang Resume.pdf" target="_blank"><li>Resumé</li></a>
+                <a href="#" id="mobActive"><li>Case Studies</li></a>
+                <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank"><li>Resumé</li></a>
             </ul>
         </div>
     </nav>        
