--- a/index.html
+++ b/index.html
@@ -4,29 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Judy Zhang</title>
-    <link href="./01_about/style.css" rel="stylesheet" type="text/css" />
+    <link href="./01_work/style.css" rel="stylesheet" type="text/css" />
     <link rel="icon" type="image/x-icon" href="./00_assets/svgs/meIcon.svg">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Marcellus+SC&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <nav>
         <img draggable="false" src="./00_assets/svgs/meMe.svg" id="me_index" width="100px">
-        <!-- <p  id="me_index">Judy Zhang</p> -->
         <div class="web">            
-            <a href="#" id="active">About</a>
-            <a href="../02_projects/index.html" >Case Studies</a>
+            <a href="#" id="active">Work</a>
+            <a href="../02_cases/index.html">Playground</a>
             <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank">Resumé</a>
         </div>
         <div class="mob">
             <div id="mobIcon"><img src="../00_assets/svgs/hmg.svg" width="60vh" height="60vh"></div>
             <ul class="mobNav">
                 <a href="#" id="mobActive"><li>About</li></a>
-                <a href="../02_projects/index.html"><li >Case Studies</li></a>
+                <a href="../02_cases/index.html"><li >Playground</li></a>
                 <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank"><li>Resumé</li></a>
             </ul>
         </div>
@@ -35,35 +34,73 @@
     <div class="intro">
         <div class="whoDat">
             <div class="datWho" id="meet">
-                <h1>Meet Judy Zhang</h1>
+                <h1 id="jz">Judy Zhang</h1>
             </div>
             <div class="datWho" id="more">
-                <p> What's up!
-                    Currently, I am a Hunter College Undergraduate majoring in Emerging Media and minoring in Computer Science. 
-                    I've got a burning passion for UI/UX Design and Front-end Web Development with an unquenchable thrist for knowledge. 
-                    Being a fine art artist and enthusiasts of sorts, I strive on incorporating my expertise and creativity to further my designs in intuitive user-friendly and accessible ways. 
-                    Got an interesting project to work on? Sign me up. now. Expand your horizons with me and aim for the stars!
-                </p>    
+                <p>Hi! I'm an aspiring UI/UX Designer currently an undergraduate at Hunter College with a burning passion for creating intuitive user-friendly and equitable designs✨</p>
             </div>
         </div>
         <div class="whoImg">
+            <div id=joy> 
+                <img draggable="false" src="./00_assets/svgs/i.svg" id="info" width="25px">
+                <small id="joyce"> photo taken by my lovely sister <a href="https://joycezhang.netlify.app/#_portfolioSection" target="_blank">Joyce</a> <3</small>
+            </div>
             <div class="imageZoom"></div>
         </div>
     </div>
-    <div class="break">
+
+    <div class="caseStudies">
+        <!-- <h1>Projects</h1> -->
+        <div class="row">
+            <div class="case">
+                <img draggable="false" src="./00_assets/projects/case studies/compl.png" class="caseCover">
+                <p class="caseTitle">Complementary // August 2024</p>
+            </div>
+            <div class="case">
+                <img draggable="false" src="./00_assets/projects/case studies/tha.png" class="caseCover">
+                <p class="caseTitle">True Healthcare Assistance // July 2024</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="case">
+                <img draggable="false" src="./00_assets/projects/design/website/stellar.png" class="caseCover">
+                <p class="caseTitle">Stellar // May 2024</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="break">
         <div id="blank"></div>
         <small>photo taken by my lovely sister <a href="https://joycezhang.netlify.app/#_portfolioSection" target="_blank">Joyce</a> <3</small>
-    </div>
-    <div class="social">
+    </div> -->
+
+
+    <!-- <div class="social">
         <h1 id="followUp"></h1>
         <div class="follow">
             <a href="https://www.upwork.com/freelancers/~012b4bcc0ee9eb2b47" target="_blank"><img src="./00_assets/svgs/upwork.svg" id="up1"></a>
-            <!-- <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=judyz1594@gmail.com" target="_blank"><img src="./00_assets/svgs/gm.svg" id="up1"></a> -->
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=judyz1594@gmail.com" target="_blank"><img src="./00_assets/svgs/gm.svg" id="up1"></a>
             <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img src="./00_assets/svgs/lk.svg" id="up2"></a>
             <a href="https://github.com/JudyZhang05" target="_blank"><img src="./00_assets/svgs/gh.svg" id="up3"></a>
         </div>
         <footer>Copyright &copy; 2024 Judy Zhang. All rights reserved. <small>(judyz1594@gmail.com)</small> </footer>
+         <footer></footer> -->
+
+         <footer>
+            <p id="followUp"></p>
+                <p>Reach me <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=judyz1594@gmail.com" target="_blank">@judyz1594@gmail.com</a></p>
+                <div class="follow">
+                    <a href="https://www.upwork.com/freelancers/~012b4bcc0ee9eb2b47" target="_blank"><img src="./00_assets/svgs/uw.svg" id="up1"></a>
+                    <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img src="./00_assets/svgs/lk.svg" id="up2"></a>
+                    <a href="https://github.com/JudyZhang05" target="_blank"><img src="./00_assets/svgs/gh.svg" id="up3"></a>
+                </div>
+                <!-- <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank">linkedin.com/in/judy-zhang-/</a>
+                <a href="https://github.com/JudyZhang05" target="_blank">github.com/JudyZhang05</a>
+                <a href="https://www.upwork.com/freelancers/~012b4bcc0ee9eb2b47" target="_blank">upwork.com/judyzhang</a> -->
+                <br/>
+                <p id="cr">&copy; 2024. All rights reserved to Judy Zhang</p>
+         </footer>
     </div>
-    <script src="./01_about/script.js"></script>
+    <script src="./01_work/script.js"></script>
 </body>
 </html>
