--- a/03_design/index.html
+++ b/03_design/index.html
@@ -20,8 +20,8 @@
     <div class="navbar" id="navbar">
       <a class="myname" href="../index.html">Judy Zhang</a>
       <a class="skip"></a>
-      <a href="../index.html">About</a>
-      <a href="../02_projects/index.html">Case Studies</a>
+      <a href="../index.html">Work</a>
+      <a href="../02_cases/index.html">Playground</a>
       <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank">Resumé</a>
     </div>
   </div>
