fixed adjacent elements

--- a/index.html
+++ b/index.html
@@ -50,57 +50,38 @@
     </div>
 
     <div class="caseStudies">
-        <!-- <h1>Projects</h1> -->
+        <h1>Projects🌠</h1>
         <div class="row">
             <div class="case">
                 <img draggable="false" src="./00_assets/projects/case studies/compl.png" class="caseCover">
                 <p class="caseTitle">Complementary // August 2024</p>
+                <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
             </div>
             <div class="case">
                 <img draggable="false" src="./00_assets/projects/case studies/tha.png" class="caseCover">
                 <p class="caseTitle">True Healthcare Assistance // July 2024</p>
+                <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
             </div>
         </div>
         <div class="row">
             <div class="case">
                 <img draggable="false" src="./00_assets/projects/design/website/stellar.png" class="caseCover">
                 <p class="caseTitle">Stellar // May 2024</p>
+                <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
             </div>
         </div>
     </div>
-
-    <!-- <div class="break">
-        <div id="blank"></div>
-        <small>photo taken by my lovely sister <a href="https://joycezhang.netlify.app/#_portfolioSection" target="_blank">Joyce</a> <3</small>
-    </div> -->
-
-
-    <!-- <div class="social">
-        <h1 id="followUp"></h1>
+    <footer>
+        <p id="followUp"></p>
+        <p id="email">Reach me <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=judyz1594@gmail.com" target="_blank">@judyz1594@gmail.com</a></p>
         <div class="follow">
-            <a href="https://www.upwork.com/freelancers/~012b4bcc0ee9eb2b47" target="_blank"><img src="./00_assets/svgs/upwork.svg" id="up1"></a>
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=judyz1594@gmail.com" target="_blank"><img src="./00_assets/svgs/gm.svg" id="up1"></a>
+            <a href="https://www.upwork.com/freelancers/~012b4bcc0ee9eb2b47" target="_blank"><img src="./00_assets/svgs/uw.svg" id="up1"></a>
             <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img src="./00_assets/svgs/lk.svg" id="up2"></a>
             <a href="https://github.com/JudyZhang05" target="_blank"><img src="./00_assets/svgs/gh.svg" id="up3"></a>
         </div>
-        <footer>Copyright &copy; 2024 Judy Zhang. All rights reserved. <small>(judyz1594@gmail.com)</small> </footer>
-         <footer></footer> -->
-
-         <footer>
-            <p id="followUp"></p>
-                <p>Reach me <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=judyz1594@gmail.com" target="_blank">@judyz1594@gmail.com</a></p>
-                <div class="follow">
-                    <a href="https://www.upwork.com/freelancers/~012b4bcc0ee9eb2b47" target="_blank"><img src="./00_assets/svgs/uw.svg" id="up1"></a>
-                    <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img src="./00_assets/svgs/lk.svg" id="up2"></a>
-                    <a href="https://github.com/JudyZhang05" target="_blank"><img src="./00_assets/svgs/gh.svg" id="up3"></a>
-                </div>
-                <!-- <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank">linkedin.com/in/judy-zhang-/</a>
-                <a href="https://github.com/JudyZhang05" target="_blank">github.com/JudyZhang05</a>
-                <a href="https://www.upwork.com/freelancers/~012b4bcc0ee9eb2b47" target="_blank">upwork.com/judyzhang</a> -->
-                <br/>
-                <p id="cr">&copy; 2024. All rights reserved to Judy Zhang</p>
-         </footer>
-    </div>
+        <br/>
+        <small id="cr">&copy; 2024. All rights reserved to Judy Zhang</small>
+    </footer>
     <script src="./01_work/script.js"></script>
 </body>
 </html>
