fixed adjacent elements

--- a/02_cases/index.html
+++ b/02_cases/index.html
@@ -99,7 +99,7 @@
                 <section class="projectDetails">
                     <section class="subDetail">Designed & Front-End Developed &#10002; 2022 - 2023</section>
                     <section class="projectTitle">Digital Pieces</section>
-                    <section class="projectBrief">Description and analysis of my digital illustrationd in a concise and elaborate webpage.</section>
+                    <section class="projectBrief">Description and analysis of my digital illustrations in a concise and elaborate webpage.</section>
                 </section>
             </div>
         </a>
@@ -107,7 +107,17 @@
 
        </div> 
 
-    
+    <footer>
+        <p id="followUp"></p>
+        <p id="email">Reach me <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=judyz1594@gmail.com" target="_blank">@judyz1594@gmail.com</a></p>
+        <div class="follow">
+            <a href="https://www.upwork.com/freelancers/~012b4bcc0ee9eb2b47" target="_blank"><img src="../../00_assets/svgs/uw.svg" id="up1"></a>
+            <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img src="../../00_assets/svgs/lk.svg" id="up2"></a>
+            <a href="https://github.com/JudyZhang05" target="_blank"><img src="../../00_assets/svgs/gh.svg" id="up3"></a>
+        </div>
+        <br/>
+        <small id="cr">&copy; 2024. All rights reserved to Judy Zhang</small>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
