data collected and inputted

--- a/02_cases/index.html
+++ b/02_cases/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <nav>
-        <img draggable="false" src="../00_assets/svgs/meMe.svg" id="me_index" width="100px">
+        <a href="../index.html"><img draggable="false" src="../00_assets/svgs/meMe.svg" id="me_index" width="100px"></a>
         <div class="web">          
             <a href="../index.html">Work</a>
             <a href="#" id="active">Playground</a>
@@ -32,7 +32,7 @@
     </nav>        
 
     <div class="topContainer">
-        <p id="welcome">Judy Zhang</p>
+        <p id="welcome"></p>
     </div>
 
     <div class="projectContainer">
@@ -111,9 +111,9 @@
         <p id="followUp"></p>
         <p id="email">Reach me <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=judyz1594@gmail.com" target="_blank">@judyz1594@gmail.com</a></p>
         <div class="follow">
-            <a href="https://www.upwork.com/freelancers/~012b4bcc0ee9eb2b47" target="_blank"><img src="../../00_assets/svgs/uw.svg" id="up1"></a>
-            <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img src="../../00_assets/svgs/lk.svg" id="up2"></a>
-            <a href="https://github.com/JudyZhang05" target="_blank"><img src="../../00_assets/svgs/gh.svg" id="up3"></a>
+            <a href="https://www.upwork.com/freelancers/~012b4bcc0ee9eb2b47" target="_blank"><img src="../../00_assets/svgs/uw.svg" id="up1" alt="connect with me at upwork"></a>
+            <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img src="../../00_assets/svgs/lk.svg" id="up2" alt="connect with me at linkedin"></a>
+            <a href="https://github.com/JudyZhang05" target="_blank"><img src="../../00_assets/svgs/gh.svg" id="up3" alt="follow me at github"></a>
         </div>
         <br/>
         <small id="cr">&copy; 2024. All rights reserved to Judy Zhang</small>
