--- a/02_cases/00_caseDetails/index.html
+++ b/02_cases/00_caseDetails/index.html
@@ -85,9 +85,9 @@
         <p id="followUp"></p>
         <p id="email">Reach me <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=judyz1594@gmail.com" target="_blank">@judyz1594@gmail.com</a></p>
         <div class="follow">
-            <a href="https://www.upwork.com/freelancers/~012b4bcc0ee9eb2b47" target="_blank"><img src="../../00_assets/svgs/uw.svg" id="up1"></a>
-            <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img src="../../00_assets/svgs/lk.svg" id="up2"></a>
-            <a href="https://github.com/JudyZhang05" target="_blank"><img src="../../00_assets/svgs/gh.svg" id="up3"></a>
+            <a href="https://www.upwork.com/freelancers/~012b4bcc0ee9eb2b47" target="_blank"><img src="../../00_assets/svgs/uw.svg" id="up1" alt="connect with me at upwork"></a>
+            <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img src="../../00_assets/svgs/lk.svg" id="up2" alt="connect with me at linkedin"></a>
+            <a href="https://github.com/JudyZhang05" target="_blank"><img src="../../00_assets/svgs/gh.svg" id="up3" alt="follow me at github"></a>
         </div>
         <br/>
         <small id="cr">&copy; 2024. All rights reserved to Judy Zhang</small>
