--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <nav>
-        <img draggable="false" src="./00_assets/svgs/meMe.svg" id="me_index" width="100px">
+        <a href=""><img draggable="false" src="./00_assets/svgs/meMe.svg" id="me_index" width="100px"></a>
         <div class="web">            
             <a href="#" id="active">Work</a>
             <a href="../02_cases/index.html">Playground</a>
@@ -53,31 +53,33 @@
         <h1>Projects🌠</h1>
         <div class="row">
             <div class="case">
-                <img draggable="false" src="./00_assets/projects/case studies/compl.png" class="caseCover">
+                <img draggable="false" src="./00_assets/projects/cases/covers/compl.png" class="caseCover">
                 <p class="caseTitle">Complementary // August 2024</p>
                 <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
             </div>
             <div class="case">
-                <img draggable="false" src="./00_assets/projects/case studies/tha.png" class="caseCover">
+                <img draggable="false" src="./00_assets/projects/cases/covers/tha.png" class="caseCover">
                 <p class="caseTitle">True Healthcare Assistance // July 2024</p>
                 <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
             </div>
         </div>
         <div class="row">
-            <div class="case">
-                <img draggable="false" src="./00_assets/projects/design/website/stellar.png" class="caseCover">
+            <a href="./01_work/01_workDetails/stellar.html">
+                <div class="case">
+                <img draggable="false" src="./00_assets/projects/cases/covers/stellar.png" class="caseCover">
                 <p class="caseTitle">Stellar // May 2024</p>
                 <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
-            </div>
+                </div>
+            </a>
         </div>
     </div>
     <footer>
         <p id="followUp"></p>
         <p id="email">Reach me <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=judyz1594@gmail.com" target="_blank">@judyz1594@gmail.com</a></p>
         <div class="follow">
-            <a href="https://www.upwork.com/freelancers/~012b4bcc0ee9eb2b47" target="_blank"><img src="./00_assets/svgs/uw.svg" id="up1"></a>
-            <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img src="./00_assets/svgs/lk.svg" id="up2"></a>
-            <a href="https://github.com/JudyZhang05" target="_blank"><img src="./00_assets/svgs/gh.svg" id="up3"></a>
+            <a href="https://www.upwork.com/freelancers/~012b4bcc0ee9eb2b47" target="_blank"><img src="./00_assets/svgs/uw.svg" id="up1" alt="connect with me at upwork"></a>
+            <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img src="./00_assets/svgs/lk.svg" id="up2" alt="connect with me at linkedin"></a>
+            <a href="https://github.com/JudyZhang05" target="_blank"><img src="./00_assets/svgs/gh.svg" id="up3" alt="follow me at github"></a>
         </div>
         <br/>
         <small id="cr">&copy; 2024. All rights reserved to Judy Zhang</small>
