data and revisions implmeneted

--- a/01_work/01_workDetails/stellar.html
+++ b/01_work/01_workDetails/stellar.html
@@ -25,7 +25,7 @@
         <div class="mob">
             <div id="mobIcon"><img src="../../00_assets/svgs/hmg.svg" width="60vh" height="60vh"></div>
             <ul class="mobNav">
-                <a href="../../index.html"><li>About</li></a>
+                <a href="../../index.html"><li>Work</li></a>
                 <a href="../../02_cases/index.html"><li >Playground</li></a>
                 <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank"><li>Resumé</li></a>
             </ul>
@@ -49,11 +49,11 @@
 
     <div class="heroImg" id="stellarHero">
         <h1 id="csTitle">STELLAR</h1>
-        <small class="label">Role</small>
+        <small class="subhead">Role</small>
         <p id="role">UI Designer & Front-End Developer</p>      
-        <small class="label">Tool</small>
+        <small class="subhead">Tool</small>
         <p id="tool">Figma, Github, Visual Studio</p>  
-        <small class="label">Duration</small>  
+        <small class="subhead">Duration</small>  
         <p id="duration">May 2024 - 1 week</p>        
     </div>
 
