--- a/01_work/01_workDetails/tha.html
+++ b/01_work/01_workDetails/tha.html
@@ -25,7 +25,7 @@
         <div class="mob">
             <div id="mobIcon"><img src="../../00_assets/svgs/hmg.svg" width="60vh" height="60vh"></div>
             <ul class="mobNav">
-                <a href="../../index.html"><li>About</li></a>
+                <a href="../../index.html"><li>Work</li></a>
                 <a href="../../02_cases/index.html"><li >Playground</li></a>
                 <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank"><li>Resumé</li></a>
             </ul>
@@ -51,14 +51,14 @@
     </ul>
 
     <div class="heroImg" id="thaHero">
-        <small>NOTE: Google UX Design Certificate Project 1 and 2</small>
+        <small>Google UX Design Certificate Project 1 and 2</small>
         <h1 id="csTitle">True Healthcare Assistance</h1>
-        <small class="label">Role</small>
+        <small class="subhead">Role</small>
         <p id="role">UX Designer</p>      
-        <small class="label">Tool</small>
+        <small class="subhead">Tool</small>
         <p id="tool">Figma, Google Doc, Google Slide</p>  
-        <small class="label">Duration</small>  
-        <p id="duration">June 2024 to July 2024</p>
+        <small class="subhead">Duration</small>  
+        <p id="duration">June 2024 to July 2024 - 3 Weeks</p>
     </div>
 
     <span id="ow"></span>
@@ -80,11 +80,11 @@
             </p>
         </div>
         <img class="show" draggable="false" src="../../00_assets/projects/cases/covers/tha.png" alt="">
-        <small>
+        <small class="caption">
             <br/>A more extensive anaylsis of this project could be found in below's case study slide decks:
-            <br/><a href="https://docs.google.com/presentation/d/1C_lNrdBmFmndNZ4Q9nxfrvav6Yg3yxxh0533Kohxj4M/edit?pli=1#slide=id.p" target="_blank"><i class="slide">Dedicated Mobile App Version</i></a>
+            <br/><a href="https://docs.google.com/presentation/d/1C_lNrdBmFmndNZ4Q9nxfrvav6Yg3yxxh0533Kohxj4M/edit?pli=1#slide=id.p" target="_blank"><i class="elink">Dedicated Mobile App Version</i></a>
             &bullet;
-            <a href="https://docs.google.com/presentation/d/1piDIbJFTgtDFt0BYnjZC8dlnSU39R0Ulm-uUKsKFi8I/edit#slide=id.ge4c37861fa_0_354" target="_blank"><i class="slide">Responsive Webpage Version</i></a>
+            <a href="https://docs.google.com/presentation/d/1piDIbJFTgtDFt0BYnjZC8dlnSU39R0Ulm-uUKsKFi8I/edit#slide=id.ge4c37861fa_0_354" target="_blank"><i class="elink">Responsive Webpage Version</i></a>
         </small>
         <span id="rs"></span>
     </div>
@@ -96,7 +96,7 @@
                 After some foundational research, I utilized Google's provided persona examples to find specific personas and altered them such that 
                 they would work in my case study. From there, to compensate for the limited participants for personal interviews, I synthized the secondary research
                 and my competitive audit's reviews to create potential user pain points. 
-                <p>A summary of my competitive audit can be found <a href="https://docs.google.com/document/d/1ESicZu08ft8WpNktu9aQ1N8iGpt6UZ_bHmCheaYx50s/edit" class="slide" target="_blank">here</a>.</p>
+                <p>A summary of my competitive audit can be found <a href="https://docs.google.com/document/d/1ESicZu08ft8WpNktu9aQ1N8iGpt6UZ_bHmCheaYx50s/edit" class="elink" target="_blank">here</a>.</p>
                 <br/>
                 <span class="subhead"><p>Pain Points</p></span>
                 <img class="show subshow" draggable="false" src="../../00_assets/projects/cases/evidence/tha/tha_pp.png" alt="">
@@ -121,7 +121,7 @@
                 empathize more with my users but also easily share with potential stakeholders what my approach is for this problem.
             </p>
             <img class="show" draggable="false" src="../../00_assets/projects/cases/evidence/tha/sb12.jpg" alt="">
-            <small><br/>(LEFT) Big-Picture  &bullet; (RIGHT) Close-Up </small>
+            <small class="caption"><br/>(LEFT) Big-Picture  &bullet; (RIGHT) Close-Up </small>
             <br/>
             <br/>
             <span class="subhead"><p>Paper Wireframes</p></span>
@@ -133,7 +133,7 @@
                 <span class="space"></span>
                 <img class="show subshow" draggable="false" src="../../00_assets/projects/cases/evidence/tha/tm2.jpg" alt="">
             </div>
-            <small><br/>(LEFT) Dedicated Mobile App  &bullet; (RIGHT) Responsive Webpage</small>
+            <small class="caption"><br/>(LEFT) Dedicated Mobile App  &bullet; (RIGHT) Responsive Webpage</small>
         <span id="df"></span>
         </div>
     </div>
@@ -155,7 +155,7 @@
                 <span class="space"></span>
                 <img class="show subshow" draggable="false" src="../../00_assets/projects/cases/evidence/tha/wf2.png" alt="">
             </div>
-            <small><br/>The full designs could be found on my figma <a href="https://www.figma.com/design/0xNtSdV7Vzm7BD0E7wItzb/Judy-Zhang-UX-Certificate-Project-1-and-2-Healthcare-Record-and-Appointment-Manager-App-%2F%2F-THCA?node-id=0-1&t=xHXb7vUYqmTMhWFr-0" target="_blank" class="slide">here</a>.</small>
+            <small class="caption"><br/>The full designs could be found on my figma <a href="https://www.figma.com/design/0xNtSdV7Vzm7BD0E7wItzb/Judy-Zhang-UX-Certificate-Project-1-and-2-Healthcare-Record-and-Appointment-Manager-App-%2F%2F-THCA?node-id=0-1&t=xHXb7vUYqmTMhWFr-0" target="_blank" class="elink">here</a>.</small>
         </div>
         <span id="pt"></span>
     </div>
@@ -192,9 +192,9 @@
         <div class="desc">
             <p>I've written an usability study moderated interview script and recorded the characteristics a participant should have in a cohesive google doc,
                 among other factors that played into the creation of this project including KPI's and project goals. 
-                You can view the full research study plans <a href="https://docs.google.com/document/d/1p9ixm-tGpTafUyX3tka5orX__ucI5Mrm-wla5vXMAhs/edit?usp=sharing" target="_blank" class="slide">here</a>.</p>
+                You can view the full research study plans <a href="https://docs.google.com/document/d/1p9ixm-tGpTafUyX3tka5orX__ucI5Mrm-wla5vXMAhs/edit?usp=sharing" target="_blank" class="elink">here</a>.</p>
             <ol class="set">
-                <li>The prompts I've tasked my participating user with are: </li>
+                <li>The prompts I've tasked participating user with are: </li>
                 <li>1. Open up the Healthcare Assistance app and ask for assistance.</li>
                 <li>2. Navigate to the healthcare records and view the top record suggested.</li>
                 <li>3. Attempt to print out a healthcare record.</li>
@@ -203,23 +203,23 @@
             <p>After conducting the usability study, I synthized my findings into actionable insights and prioritized them based on how negatively they impact the users'
                 flow. <br/>
                 <ul class="set">
-                    <li>&bullet; Priority 0 - Users found the signing up process deceptive without properly logging in their information themselves
+                    <li>&bullet; P0 (Must Have) - Users found the signing up process deceptive without properly logging in their information themselves
                          and a more intuitive navigation to progress and backtrack along their user flow.</li>
-                    <li>&bullet; Priority 1 - Users wants clearer labels to know where they are navigating to.</li>
+                    <li>&bullet; P1 (Nice to Have) - Users wants clearer labels to know where they are navigating to.</li>
                 </ul>
             </p>
             <br/>
             <br/>
-            <span class="label"><p>Mockups</p></span>
+            <span class="subhead"><p>Mockups</p></span>
             <p>After revising my previous designs to address these issues, I could begin planning out color, font, and style for the mockups. To do this,
-                I created a sticker sheet that illustrated the brand's identity and designed main compononets to refer back to when needed.
+                I created a sticker sheet that illustrated the brand's identity and designed main compononets to easily refer back to when needed.
             </p>
             <div class="mshow">
                 <img class="show subshow" draggable="false" src="../../00_assets/projects/cases/evidence/tha/ss1.png" alt="">
                 <span class="space"></span>
                 <img class="show subshow" draggable="false" src="../../00_assets/projects/cases/evidence/tha/ss2.png" alt="" >
             </div>
-            <small><br/>(LEFT) Dedicated Mobile App  &bullet; (RIGHT) Responsive Webpage</small>
+            <small class="caption"><br/>(LEFT) Dedicated Mobile App  &bullet; (RIGHT) Responsive Webpage</small>
         </div>
         <span id="fp"></span>
     </div>
@@ -230,14 +230,14 @@
             <p>The final product of this project is a clickable high-fidelity prototype hosted through Figma's prototype feature.</p>
         </div>
             <img class="show" draggable="false" src="../../00_assets/projects/cases/covers/thav1.png" alt="">
-            <small><br/>Demo the Dedicated Mobile App Prototype </i><a href="https://www.figma.com/proto/0xNtSdV7Vzm7BD0E7wItzb/Judy-Zhang-UX-Certificate-Project-1-and-2-Healthcare-Record-and-Appointment-Manager-App-%2F%2F-THCA?node-id=135-3073&t=biZSWYYHmzUwTgB1-1&scaling=scale-down&content-scaling=fixed&page-id=135%3A1842&starting-point-node-id=135%3A3073" target="_blank" class="slide">here</a>.</small>
+            <small><br/>Demo the Dedicated Mobile App Prototype <a href="https://www.figma.com/proto/0xNtSdV7Vzm7BD0E7wItzb/Judy-Zhang-UX-Certificate-Project-1-and-2-Healthcare-Record-and-Appointment-Manager-App-%2F%2F-THCA?node-id=135-3073&t=biZSWYYHmzUwTgB1-1&scaling=scale-down&content-scaling=fixed&page-id=135%3A1842&starting-point-node-id=135%3A3073" target="_blank" class="elink">here</a>.</small>
             <br/>
             <br/>
             <img class="show" draggable="false" src="../../00_assets/projects/cases/covers/thav2.png" alt="">
-            <small>
-                <br/>Demo Responsive Webpage Prototypes </i><a href="https://www.figma.com/proto/0xNtSdV7Vzm7BD0E7wItzb/Judy-Zhang-UX-Certificate-Project-1-and-2-Healthcare-Record-and-Appointment-Manager-App-%2F%2F-THCA?node-id=403-5358&t=xHXb7vUYqmTMhWFr-0&scaling=scale-down&content-scaling=fixed&page-id=301%3A979&starting-point-node-id=403%3A5358&device-frame=0" target="_blank" class="slide">Computer Desktop</a>
-                &bullet; </i><a href="https://www.figma.com/proto/0xNtSdV7Vzm7BD0E7wItzb/Judy-Zhang-UX-Certificate-Project-1-and-2-Healthcare-Record-and-Appointment-Manager-App-%2F%2F-THCA?node-id=403-6825&t=xHXb7vUYqmTMhWFr-0&scaling=scale-down&content-scaling=fixed&page-id=316%3A5269&starting-point-node-id=403%3A6825" target="_blank" class="slide">Tablet Screen</a>
-                &bullet; </i><a href="https://www.figma.com/proto/0xNtSdV7Vzm7BD0E7wItzb/Judy-Zhang-UX-Certificate-Project-1-and-2-Healthcare-Record-and-Appointment-Manager-App-%2F%2F-THCA?node-id=403-8221&t=xHXb7vUYqmTMhWFr-0&scaling=scale-down&content-scaling=fixed&page-id=403%3A8220&starting-point-node-id=403%3A8221" target="_blank" class="slide">Mobile Screen</a></small>
+            <small class="caption">
+                <br/>Demo Responsive Webpage Prototypes: <a href="https://www.figma.com/proto/0xNtSdV7Vzm7BD0E7wItzb/Judy-Zhang-UX-Certificate-Project-1-and-2-Healthcare-Record-and-Appointment-Manager-App-%2F%2F-THCA?node-id=403-5358&t=xHXb7vUYqmTMhWFr-0&scaling=scale-down&content-scaling=fixed&page-id=301%3A979&starting-point-node-id=403%3A5358&device-frame=0" target="_blank" class="elink">Computer Desktop</a>
+                &bullet; <a href="https://www.figma.com/proto/0xNtSdV7Vzm7BD0E7wItzb/Judy-Zhang-UX-Certificate-Project-1-and-2-Healthcare-Record-and-Appointment-Manager-App-%2F%2F-THCA?node-id=403-6825&t=xHXb7vUYqmTMhWFr-0&scaling=scale-down&content-scaling=fixed&page-id=316%3A5269&starting-point-node-id=403%3A6825" target="_blank" class="elink">Tablet Screen</a>
+                &bullet; <a href="https://www.figma.com/proto/0xNtSdV7Vzm7BD0E7wItzb/Judy-Zhang-UX-Certificate-Project-1-and-2-Healthcare-Record-and-Appointment-Manager-App-%2F%2F-THCA?node-id=403-8221&t=xHXb7vUYqmTMhWFr-0&scaling=scale-down&content-scaling=fixed&page-id=403%3A8220&starting-point-node-id=403%3A8221" target="_blank" class="elink">Mobile Screen</a></small>
         <span id="rf"></span>
     </div>
 
