--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="mob">
             <div id="mobIcon"><img src="../00_assets/svgs/hmg.svg" width="60vh" height="60vh"></div>
             <ul class="mobNav">
-                <a href="#" id="mobActive"><li>About</li></a>
+                <a href="#" id="mobActive"><li>Work</li></a>
                 <a href="../02_cases/index.html"><li >Playground</li></a>
                 <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank"><li>Resumé</li></a>
             </ul>
@@ -52,23 +52,27 @@
     <div class="caseStudies">
         <h1>Projects🌠</h1>
         <div class="row">
-            <div class="case">
-                <img draggable="false" src="./00_assets/projects/cases/covers/compl.png" class="caseCover">
-                <p class="caseTitle">Complementary // August 2024</p>
-                <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
-            </div>
-            <div class="case">
-                <img draggable="false" src="./00_assets/projects/cases/covers/tha.png" class="caseCover">
-                <p class="caseTitle">True Healthcare Assistance // July 2024</p>
-                <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
-            </div>
+            <a href="./01_work/01_workDetails/compl.html">
+                <div class="case">
+                    <img draggable="false" src="./00_assets/projects/cases/covers/compl.png" class="caseCover">
+                    <p class="caseTitle">Complementary // August 2024</p>
+                    <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
+                </div>
+            </a>
+            <a href="./01_work/01_workDetails/tha.html">
+                <div class="case">
+                    <img draggable="false" src="./00_assets/projects/cases/covers/tha.png" class="caseCover">
+                    <p class="caseTitle">True Healthcare Assistance // July 2024</p>
+                    <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
+                </div>
+            </a>
         </div>
         <div class="row">
             <a href="./01_work/01_workDetails/stellar.html">
                 <div class="case">
-                <img draggable="false" src="./00_assets/projects/cases/covers/stellar.png" class="caseCover">
-                <p class="caseTitle">Stellar // May 2024</p>
-                <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
+                    <img draggable="false" src="./00_assets/projects/cases/covers/stellar.png" class="caseCover">
+                    <p class="caseTitle">Stellar // May 2024</p>
+                    <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
                 </div>
             </a>
         </div>
