--- a/01_work/01_workDetails/tha.html
+++ b/01_work/01_workDetails/tha.html
@@ -212,7 +212,7 @@
             <br/>
             <span class="subhead"><p>Mockups</p></span>
             <p>After revising my previous designs to address these issues, I could begin planning out color, font, and style for the mockups. To do this,
-                I created a sticker sheet that illustrated the brand's identity and designed main compononets to easily refer back to when needed.
+                I created a sticker sheet that illustrated the brand's identity and designed main components to easily refer back to when needed.
             </p>
             <div class="mshow">
                 <img class="show subshow" draggable="false" src="../../00_assets/projects/cases/evidence/tha/ss1.png" alt="">
