adds more recent work to the playground

--- a/02_cases/index.html
+++ b/02_cases/index.html
@@ -42,6 +42,42 @@
 
         <div id="projecTop"></div>
 
+            <div class="projectLeft project">
+                <section class="projectView">
+                    <img draggable="false" class="projectImg" src="../00_assets/projects/code/seemore.png" alt="Digital Design, Usability, and 3D Graphics Portfolio">
+                </section>
+                <section class="projectDetails">
+                    <section class="subDetail">Designed &#10002; 2025</section>
+                    <section class="projectTitle">More Digital Designs</section>
+                    <section class="projectBrief">This is my webflow portfolio for my MEDP250 - Digital Design & Usability and MEDP299 - 3D Graphics for Design, Film and AR courses.</section>
+                </section>
+            </div>
+        <div class="skip"></div>
+        
+            <div class="projectRight project">
+                <section class="projectView">
+                    <img draggable="false" class="projectImg" src="../00_assets/projects/code/planet.png" alt="PlaneTree">
+                </section>
+                <section class="projectDetails">
+                    <section class="subDetail">Designed, Front-End & Back-End Developed &#10002; 2024</section>
+                    <section class="projectTitle">PlaneTree</section>
+                    <section class="projectBrief">PlaneTree is an archive of plant entries. It enables and encourages people to share their plants while striving for a greener and healthier earth.</section>
+                </section>
+            </div>
+        <div class="skip"></div>
+
+            <div class="projectLeft project">
+                <section class="projectView">
+                    <img draggable="false" class="projectImg" src="../00_assets/projects/code/greekmythD&I.png" alt="Greek Mytholodolgy - Daedalus and Icarus Project">
+                </section>
+                <section class="projectDetails">
+                    <section class="subDetail">Designed & Front-End Developed &#10002; 2024</section>
+                    <section class="projectTitle">Daedalus and Icarus</section>
+                    <section class="projectBrief">This is a an interactive web page featuring the greek mytholodolgy Daedalus and Icarus.</section>
+                </section>
+            </div>
+        <div class="skip"></div>
+
             <div class="projectRight project">
                 <section class="projectView">
                     <img draggable="false" class="projectImg" src="../00_assets/projects/code/skAPI.gif" alt="Stephen King API Project">
