updates precisely case study

--- a/02_cases/index.html
+++ b/02_cases/index.html
@@ -18,14 +18,14 @@
         <a href="../index.html"><img draggable="false" src="../00_assets/svgs/meMe.svg" id="me_index" width="100px"></a>
         <div class="web">          
             <a href="../index.html">Work</a>
-            <a href="#" id="active">Playground</a>
+            <a href="#" id="active">Artwork</a>
             <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank">Resumé</a>
         </div>
         <div class="mob">
             <div id="mobIcon"><img src="../00_assets/svgs/hmg.svg" width="60vh" height="60vh"></div>
             <ul class="mobNav">
                 <a href="../index.html"><li>Work</li></a>
-                <a href="#" id="mobActive"><li>Playground</li></a>
+                <a href="#" id="mobActive"><li>Artwork</li></a>
                 <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank"><li>Resumé</li></a>
             </ul>
         </div>
