--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <a href=""><img draggable="false" src="./00_assets/svgs/meMe.svg" id="me_index" width="100px"></a>
         <div class="web">            
             <a href="#" id="active">Work</a>
-            <a href="../02_cases/index.html">Playground</a>
+            <a href="../02_cases/index.html">Artwork</a>
             <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank">Resumé</a>
         </div>
         <div class="mob">
             <div id="mobIcon"><img src="../00_assets/svgs/hmg.svg" width="60vh" height="60vh"></div>
             <ul class="mobNav">
                 <a href="#" id="mobActive"><li>Work</li></a>
-                <a href="../02_cases/index.html"><li >Playground</li></a>
+                <a href="../02_cases/index.html"><li >Artwork</li></a>
                 <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank"><li>Resumé</li></a>
             </ul>
         </div>
@@ -37,7 +37,7 @@
                 <h1 id="jz">Judy Zhang</h1>
             </div>
             <div class="datWho" id="more">
-                <p>Hi! I'm an aspiring UI/UX Designer currently an undergraduate at Hunter College with a burning passion for creating intuitive user-friendly and equitable designs✨</p>
+                <p>Hi! I'm an emerging UI/UX Designer with a burning passion for creating intuitive user-friendly and equitable designs✨</p>
             </div>
         </div>
         <div class="whoImg">
@@ -52,6 +52,21 @@
     <div class="caseStudies">
         <h1>Projects🌠</h1>
         <div class="row">
+            <a href="./01_work/01_workDetails/precisely.html">
+                <div class="case">
+                    <img draggable="false" src="./00_assets/projects/cases/covers/precisely.png" class="caseCover">
+                    <p class="caseTitle">Precisely // August 2025</p>
+                    <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
+                </div>
+            </a>
+            <!-- <a href=""> -->
+                <div class="case">
+                    <img draggable="false" src="./00_assets/projects/cases/covers/graditude.png" class="caseCover wip">
+                    <p class="caseTitle">graditude // June 2025</p>
+                    <!-- <p class="viewImage"><span class="coverSymb">&#10148;</span></p> -->
+                    <p class="cantView">Coming Soon!</p>
+                </div>
+            <!-- </a> -->
             <a href="./01_work/01_workDetails/compl.html">
                 <div class="case">
                     <img draggable="false" src="./00_assets/projects/cases/covers/compl.png" class="caseCover">
@@ -67,7 +82,7 @@
                 </div>
             </a>
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <a href="./01_work/01_workDetails/stellar.html">
                 <div class="case">
                     <img draggable="false" src="./00_assets/projects/cases/covers/stellar.png" class="caseCover">
@@ -75,7 +90,7 @@
                     <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
                 </div>
             </a>
-        </div>
+        </div> -->
     </div>
     <footer>
         <p id="followUp"></p>
@@ -86,7 +101,7 @@
             <a href="https://github.com/JudyZhang05" target="_blank"><img src="./00_assets/svgs/gh.svg" id="up3" alt="follow me at github"></a>
         </div>
         <br/>
-        <small id="cr">&copy; 2024. All rights reserved to Judy Zhang</small>
+        <small id="cr">&copy; 2026. All rights reserved to Judy Zhang</small>
     </footer>
     <script src="./01_work/script.js"></script>
 </body>
